--- a/config/environments/development.yml
+++ b/config/environments/development.yml
@@ -21,7 +21,8 @@ process_count: 1
 # ssl_key_file:
 # ssl_cert_file:
 redis_url: "redis://localhost:6379"
-database_url: "postgres://postgres:postgres@localhost:5432/blogway_development"
+# database_url: postgres://postgres:postgres@localhost:5432/blogway_development
+database_url: postgres://admin:password@db:5432/blogway_development
 auto_reload: true
 
 session:
